[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Menus/Map.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Empty_Map.png" type="Texture" id=2]
[ext_resource path="res://Fonts/FinkwellBig.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/Finkwell.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/HealthBar/background.png" type="Texture" id=5]
[ext_resource path="res://Sprites/HealthBar/Fill.png" type="Texture" id=6]
[ext_resource path="res://Fonts/FinkwellSmall.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sprites/Key_Find.png" type="Texture" id=8]
[ext_resource path="res://Scenes/UI/ShockEffect.tscn" type="PackedScene" id=9]

[node name="Map" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 200.0
margin_top = 100.0
margin_right = 1720.0
margin_bottom = 820.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Sprite" parent="."]
position = Vector2( 64, 352 )
scale = Vector2( 0.1, 0.4 )

[node name="Sprite" type="Sprite" parent="Inventory"]
position = Vector2( 0, -280 )
scale = Vector2( 1, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Inventory"]
scale = Vector2( 1, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="Inventory"]
position = Vector2( 0, 280 )
scale = Vector2( 1, 0.25 )
texture = ExtResource( 2 )

[node name="Weapon" type="Sprite" parent="Inventory"]
position = Vector2( 0, -280 )
scale = Vector2( 1, 0.25 )

[node name="Item" type="Sprite" parent="Inventory"]
scale = Vector2( 1, 0.25 )

[node name="Item2" type="Sprite" parent="Inventory"]
position = Vector2( 0, 280 )
scale = Vector2( 1, 0.25 )

[node name="Key" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 0, 560 )
scale = Vector2( 1, 0.25 )
texture = ExtResource( 8 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 14.0
margin_top = 144.0
margin_right = 114.0
margin_bottom = 190.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StuffLabel" type="Label" parent="ColorRect3"]
margin_top = 6.0
margin_right = 112.0
margin_bottom = 50.0
rect_scale = Vector2( 0.9, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Stuff"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WAtkLabel" type="Label" parent="ColorRect3"]
margin_left = 101.0
margin_top = 32.0
margin_right = 197.0
margin_bottom = 76.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 7 )
text = "Atk"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WAtk" type="Label" parent="ColorRect3"]
modulate = Color( 0.952941, 0.403922, 0.258824, 1 )
margin_left = 101.0
margin_top = 64.0
margin_right = 197.0
margin_bottom = 108.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WSpdLabel" type="Label" parent="ColorRect3"]
margin_left = 101.0
margin_top = 96.0
margin_right = 197.0
margin_bottom = 140.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 7 )
text = "Spd"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WSpd" type="Label" parent="ColorRect3"]
modulate = Color( 0.443137, 0.329412, 0.745098, 1 )
margin_left = 101.0
margin_top = 131.0
margin_right = 197.0
margin_bottom = 175.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 7 )
text = "-30"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 208.0
margin_top = 912.0
margin_right = 1712.0
margin_bottom = 1056.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Node" parent="."]

[node name="Name" type="Label" parent="Stats"]
margin_left = 224.0
margin_top = 848.0
margin_right = 966.0
margin_bottom = 914.0
custom_fonts/font = ExtResource( 3 )
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LvLabel" type="Label" parent="Stats"]
margin_left = 976.0
margin_top = 848.0
margin_right = 1696.0
margin_bottom = 914.0
custom_fonts/font = ExtResource( 3 )
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpLabel" type="Label" parent="Stats"]
margin_left = 224.0
margin_top = 928.0
margin_right = 424.0
margin_bottom = 1033.0
custom_fonts/font = ExtResource( 4 )
text = "Hp:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BleedBar" type="TextureProgress" parent="Stats"]
margin_left = 319.0
margin_top = 928.0
margin_right = 719.0
margin_bottom = 978.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 0.635294, 0, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="Stats"]
margin_left = 319.0
margin_top = 928.0
margin_right = 719.0
margin_bottom = 978.0
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpValue" type="Label" parent="Stats"]
margin_left = 736.0
margin_top = 928.0
margin_right = 896.0
margin_bottom = 978.0
custom_fonts/font = ExtResource( 4 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatValues" type="Label" parent="Stats"]
margin_left = 944.0
margin_top = 928.0
margin_right = 1696.0
margin_bottom = 978.0
custom_fonts/font = ExtResource( 4 )
valign = 1

[node name="XpLabel" type="Label" parent="Stats"]
margin_left = 224.0
margin_top = 992.0
margin_right = 381.0
margin_bottom = 1097.0
custom_fonts/font = ExtResource( 4 )
text = "Exp:
"

[node name="XpBar" type="TextureProgress" parent="Stats"]
margin_left = 320.0
margin_top = 992.0
margin_right = 720.0
margin_bottom = 1042.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XpValue" type="Label" parent="Stats"]
margin_left = 736.0
margin_top = 992.0
margin_right = 896.0
margin_bottom = 1042.0
custom_fonts/font = ExtResource( 4 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="Stats"]
margin_left = 944.0
margin_top = 992.0
margin_right = 1696.0
margin_bottom = 1042.0
custom_fonts/font = ExtResource( 4 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorLabel" type="Label" parent="."]
margin_left = 1750.0
margin_top = 25.0
margin_right = 2067.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 7 )
text = "Floor 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShockEffect" parent="." instance=ExtResource( 9 )]
[connection signal="game_over" from="." to="." method="_on_Map_game_over"]
[connection signal="shock_trigger" from="." to="ShockEffect" method="_on_Map_shock_trigger"]
